--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,5 +10,6 @@
 @use "components/product";
 @use "components/footer";
 @use "components/modal";
+@use "components/radio";
 
 @import "normalize.css"; // normalize.css - нзв пакета
