--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,3 +1,8 @@
+@use '../variables' as *;
+@use '../media' as *;
+@use '../fonts' as *;
+
+
 .modal-overlay {
     position: fixed;
     overflow-y: auto; // появится вертик сроклл если надо
@@ -25,26 +30,74 @@
 
 
 .modal {
-    width: 80vw; // 80% от рамзера экрана
-    max-width: 600px;
+    max-width: 676px;
+    width: 100%;
+    min-height: 459px;
     margin: auto;
-    padding: 20px;
+    // padding: 20px;
     border-radius: 8px;
-    background-color: #fff;
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.3);
+    background-color: $white;
+    box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
+    display: flex;
+    overflow: hidden; // чтобы углы у картинки-собачки скруглиилсь
 
+    &::before {
+        // собачка (уже флекс элемент)
+        content: '';
+        display: block;
+        width: 48%; // ширина модалки / ширина картинки
+        background-image: url('/img/dog.jpg');
+        background-size: cover;
+        background-position: center;
 
-    &__content {}
+    }
 
-    &__title {}
+    &__content {
+        width: 52%; // ширина модалки / ширина контента(правая часть)
+        display: flex;
+        flex-direction: column;
+        padding: 24px;
 
-    &__cart-items {}
+    }
 
-    &__cart-item {}
+    &__title {
+        margin-bottom: 16px;
+        font-size: 24px;
+        font-weight: 400;
+    }
 
-    &__cart-item-image {}
+    &__cart-items {
+        flex-grow: 1; // будет занимать все свободное пространстов
+        margin-bottom: 24px;
+    }
 
-    &__cart-item-count {}
+    &__cart-item {
+        display: grid;
+        grid-template-areas:
+            'image title title'
+            'image control price'
+        ;
+
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.4;
+    }
+
+    &__cart-item-image {
+        grid-area: image;
+        align-self: start; // выравнивание грид элмента по вертикали относиельно грид ячейки
+        grid-column: 1/3;
+    }
+
+    &__cart-item-title {
+        grid-area: title;
+        font-size: 16px;
+        font-weight: 400;
+    }
+
+    &__cart-item-count {
+        grid-area: control;
+    }
 
     &__minus {}
 
@@ -52,7 +105,15 @@
 
     &__plus {}
 
-    &__cart-item-price {}
+    &__cart-item-price {
+        grid-area: price;
+        justify-self: end; // выравнивание по горизонтали относительно грид ячейки
+    }
+
+    form {
+        //  флекс элемент
+        margin-top: auto;
+    }
 
     &__cart-fieldset {}
 
