--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -54,6 +54,12 @@ button {
     background-color: transparent;
 }
 
+fieldset {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
 a {
     text-decoration: none;
     color: inherit;
