--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -77,16 +77,29 @@
             'image title title'
             'image control price'
         ;
-
+        grid-template-columns: 54px 1fr max-content; // 1fr -занимай все свободное простанство, max-content занимает столько сколько ему нужно
+        gap: 8px 12px;
         font-size: 16px;
         font-weight: 400;
         line-height: 1.4;
+        border-bottom: 1px solid rgb(46, 53, 20, 0.04);
+        padding: 12px 0;
+
+        &:first-child {
+            padding-top: 0;
+        }
+
+        &:last-child {
+            padding-bottom: 0;
+        }
     }
 
     &__cart-item-image {
         grid-area: image;
         align-self: start; // выравнивание грид элмента по вертикали относиельно грид ячейки
-        grid-column: 1/3;
+        width: 54px;
+        height: 54px;
+        object-fit: cover; // будет занимать весь бокс
     }
 
     &__cart-item-title {
@@ -97,6 +110,19 @@
 
     &__cart-item-count {
         grid-area: control;
+        max-width: 70px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 8px;
+    }
+
+    &__btn {
+        // padding: 4px 8px;
+        width: 24px;
+        height: 24px;
+        border: 1px solid $green;
+        border-radius: 6px;
     }
 
     &__minus {}
@@ -115,9 +141,15 @@
         margin-top: auto;
     }
 
-    &__cart-fieldset {}
+    &__cart-fieldset {
+        margin-bottom: 16px;
+    }
 
-    &__cart-legend {}
+    &__cart-legend {
+        margin-bottom: 4px;
+        font-size: 16px;
+        font-weight: 700;
+    }
 
     &__radio {}
 
