--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,5 +11,6 @@
 @use "components/footer";
 @use "components/modal";
 @use "components/radio";
+@use "components/order-message";
 
 @import "normalize.css"; // normalize.css - нзв пакета
