add media styles for modal

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -3,7 +3,7 @@ $laptop: 1140px;
 $tablet: 940px;
 $mobile: 520px;
 
-// миксины
+// миксины;
 
 @mixin bigscreen {
     @media (min-width: $bigscreen) {
