--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -4,11 +4,12 @@
 
 
 .modal-overlay {
+    // подложка для модалки(область которая окружает модалку)
     position: fixed;
     overflow-y: auto; // появится вертик сроклл если надо
     padding: 20px 0;
     z-index: 999;
-    // растянется на всю ширину:
+    // top left right bottom растянут на всю ширину:
     top: 0;
     left: 0;
     bottom: 0;
@@ -32,17 +33,22 @@
 .modal {
     max-width: 676px;
     width: 100%;
-    min-height: 459px;
+    min-height: 459px; // для переполнеия текстом
+    display: flex;
     margin: auto;
     // padding: 20px;
     border-radius: 8px;
     background-color: $white;
     box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
-    display: flex;
     overflow: hidden; // чтобы углы у картинки-собачки скруглиилсь
 
+    @include mobile {
+        flex-direction: column;
+    }
+
+
     &::before {
-        // собачка (уже флекс элемент)
+        // собака (уже флекс элемент)
         content: '';
         display: block;
         width: 48%; // ширина модалки / ширина картинки
@@ -50,6 +56,10 @@
         background-size: cover;
         background-position: center;
 
+        @include mobile {
+            width: 100%;
+            height: 200px;
+        }
     }
 
     &__content {
@@ -58,6 +68,9 @@
         flex-direction: column;
         padding: 24px;
 
+        @include mobile {
+            width: 100%;
+        }
     }
 
     &__title {
@@ -153,7 +166,6 @@
 
     &__radio {
         display: block;
-
         font-size: 16px;
     }
 
@@ -171,7 +183,6 @@
         font-size: 16px;
         text-align: center;
         color: $light;
-
     }
 
     &__cart-price {
