--- a/src/scss/components/_store.scss
+++ b/src/scss/components/_store.scss
@@ -12,12 +12,24 @@
         justify-content: space-between;
         align-items: center;
         margin-bottom: 40px;
+
+        @include mobile {
+            justify-content: end;
+            flex-wrap: wrap;
+            gap: 30px;
+        }
     }
 
     &__categories {
         display: flex;
         align-items: center;
         gap: 28px;
+        overflow-x: auto; // как только пеерстанет вмещаться так появится скролл гор
+
+        @include mobile {
+            flex-grow: 1;
+            gap: 16px;
+        }
     }
 
     &__category-item {}
@@ -51,10 +63,16 @@
     }
 
     &__cart-button {
+        // флекс элемент
         position: relative;
         display: block;
         width: 28px;
         height: 28px;
+
+
+        @include mobile {
+            margin-left: auto;
+        }
     }
 
     &__cart-count {
@@ -65,6 +83,11 @@
         line-height: 1;
         text-align: center;
         color: $light;
+        vertical-align: middle;
+
+        @include bigscreen {
+            vertical-align: middle;
+        }
     }
 
     &__cart-icon {
@@ -97,6 +120,7 @@
 
     &__item {
         display: flex;
+        justify-self: center; // чтоб карточка не смещалась влево при адаптиве
     }
 
     &__product {}
