--- a/src/scss/components/_store.scss
+++ b/src/scss/components/_store.scss
@@ -69,6 +69,10 @@
         width: 28px;
         height: 28px;
 
+        @include bigscreen {
+            width: 32px;
+            height: 32px;
+        }
 
         @include mobile {
             margin-left: auto;
@@ -83,7 +87,7 @@
         line-height: 1;
         text-align: center;
         color: $light;
-        vertical-align: middle;
+        //vertical-align: middle;
 
         @include bigscreen {
             vertical-align: middle;
@@ -96,6 +100,8 @@
         left: 0;
         bottom: 0;
         right: 0;
+        width: 100%;
+        height: 100%;
         z-index: 1;
     }
 
@@ -113,12 +119,15 @@
         gap: 20px;
         justify-content: center;
 
+        //display: flex;
+
         @include mobile {
             grid-template-columns: 1fr;
         }
     }
 
     &__item {
+        // flex-basis: 420px;
         display: flex;
         justify-self: center; // чтоб карточка не смещалась влево при адаптиве
     }
